--- a/src/app/global.css
+++ b/src/app/global.css
@@ -1,7 +1,7 @@
 body {
   margin: 0px;
   height: 100%;
-  overflow: hidden;
+  overflow: auto;
   font-family: 'Manrope', sans-serif;
   font-weight: 400;
   background-color: #16142a;
