--- a/src/app/global.css
+++ b/src/app/global.css
@@ -2,7 +2,7 @@ body {
   margin: 0px;
   height: 100%;
   overflow: hidden;
-  font-family: 'Manrope', sans-serif;
+  font-family: 'Roboto', 'Poppins', 'Manrope', sans-serif;
   font-weight: 400;
   background-color: #16142a;
   -webkit-font-smoothing: antialiased;
